<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.school.jakub.trainingplanmaker.controller.atlas.AtlasActivity$PlaceholderFragment">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutAtlas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/atlas_background2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <ListView
            android:id="@+id/atlas_fragment_exercises"
            android:layout_width="344dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:divider="@null"
            app:layout_constraintBottom_toTopOf="@+id/atlas_fragment_addBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ListView>

        <Button
            android:id="@+id/atlas_fragment_addBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_style1"
            android:text="Dodaj nowe ćwieczenie"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>




</android.support.constraint.ConstraintLayout>