<resources>
    <string name="app_name">TrainingPlanMaker</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_backpack_edit">BackpackEditActivity</string>
    <string name="title_activity_backpack__checklist">Checklista</string>
    <string name="title_activity_profile_measurement">Moje pomiary</string>
    <string name="title_activity_atlas">AtlasActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_training_plans">TrainingPlans</string>
    <string name="title_activity_training_plan_edit">training_plan_edit</string>
    <string name="title_activity_training_plan_select">TrainingPlanSelect</string>
    <string name="title_activity_diary">DiaryActivity</string>
    <string name="title_activity_add_exercise_to_day_entry">AddExerciseToDayEntry</string>
    <string name="title_activity_measurement_monitor">MeasurementMonitorActivity</string>
    <string name="title_activity_manage_measurements">ManageMeasurementsActivity</string>
    <string name="title_activity_exercise_monitor">ExerciseMonitor</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_bmi_calculator">BmiCalculatorActivity</string>

</resources>
